# Dentix

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tmp_att.txt  tmp_att2.txt  vite.config.ts
.claude/: settings.local.json
.claude/agents/: frontend-developer.md
agents/code-reviewer/: AGENTS.md
agents/frontend-developer/: AGENTS.md
agents/typescript-pro/: AGENTS.md
agents/ui-ux-designer/: AGENTS.md
docs/: ARCHITECTURE.md  AUTO_UPDATE_GUIDE.md  CUSTOM_HOOKS_GUIDE.md  DATABASE_LOCKS.md  DESIGN_IMPROVEMENTS_SUMMARY.md  ERD.md  EXAMPLE_UNIFIED_COMPONENT.md  FAB_DESIGN.md  FAB_DESIGN_SPECIFICATION.md  FAB_INTEGRATION_GUIDE.md  FAB_REVIEW_SUMMARY.md  FINANCES_PAGE_REFACTOR_SPEC.md  FINANCES_PAGE_UX_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TABS_LAYOUT.md  IMPLEMENTATION_TASKS_COMPLETE.md  MACOS_DOCK_IMPLEMENTATION.md  MIGRATION_COMPLETE.md  PHASE_3_COMPLETE.md  README.md  STATE_MANAGEMENT.md  STATE_MANAGEMENT_ARCHITECTURE.md  STATE_MANAGEMENT_IMPLEMENTATION_PLAN.md  STATE_MANAGEMENT_MIGRATION.md  STATE_MANAGEMENT_README.md  STATE_MANAGEMENT_SOLUTION.md  TABBED_LAYOUT_IMPLEMENTATION.md  TELEMETRY_TESTING.md  TESTING_CHECKLIST.md  UI_UX_IMPROVEMENTS_PATIENTS_LIST.md  UX_CRITICAL_ISSUES_ANALYSIS.md  UX_FIXES_IMPLEMENTATION_GUIDE.md  UX_IMPLEMENTATION_GUIDE.md  UX_IMPROVEMENT_ROADMAP.md  UX_TABBED_LAYOUT_DESIGN.md  UX_VISUAL_SPECIFICATION.md  ZUSTAND_STORE_DIAGRAM.md  codebase.md  standards.md
docs/api/: endpoints.md  schemas.md
docs/infrastructure/: deployment.md  docker.md  env.md  schema.puml
docs/runbook/: failures.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app.json  default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_dentix_schema_final.sql  001_initial_schema.sql  001_schema.sql  001_unified_schema.sql  002_add_templates_and_signers.sql  002_appointments.sql  003_add_diagnosis_options.sql  003_message_queue.sql  004_add_emergency_phone.sql  004_telemetry_config.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: Attachments.tsx  BrandBlock.tsx  ConsentsList.tsx  DentalChart.tsx  DiagnosisArea.tsx  ErrorBoundary.tsx  ErrorScreen.tsx  FilePreviewModal.tsx  FinancialHistoryBlock.tsx  FloatingActionButton.tsx  HistoricalModeBanner.tsx  HistoricalSessionsSidebar.tsx  InformedConsentModal.tsx  Layout.tsx  (+27 more)
(+106 files in other folders)
