[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
# Núcleo de Tauri
tauri = { version = "2.8.5", features = [] }

# Plugins
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"

# utilidades
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Database access for Rust commands
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
