[package]
name = "app"
version = "0.1.0"
description = "Oklus - A Desktop App for dentists"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Núcleo de Tauri
tauri = { version = "2", features = [] }

# Plugins
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# utilidades
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
urlencoding = "2.1"

# Database access for Rust commands
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

# PDF generation
headless_chrome = "1.0"
